# video_streaming_django

./: .gitignore  Dockerfile  docker-compose-dev.yml  docker-compose-git.yml  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: pre-commit.yml  test.yml
app/: entrypoint.sh  manage.py  requirements.txt
app/api/auth/: permissions.py  serializers.py  services.py  urls.py  validation.py  views.py
app/api/auth/tests/test_api/: test_account_view.py  test_register_account.py
app/api/auth/tests/test_serializers/: test_register_serializer.py
app/api/utils/: setup_tests.py
app/api/utils/utils_tests/: setup_tests.py
app/api/video/: admin.py  apps.py  models.py  permissions.py  serializers.py  services.py  services_serializers.py  services_views.py  urls.py  views.py
app/api/video/migrations/: 0001_initial.py  0002_video_account.py  0002_video_delete_time_alter_video_bucket_path_and_more.py  0003_rename_upload_date_video_upload_datetime.py  0004_alter_video_upload_datetime.py
app/api/video/tests/test_api/: test_api_video.py
app/base/: settings.py  urls.py  yasg.py
